# bioproject_backend

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  app.py  conda_activate.sh  config.py  docker-compose-dev.yml  pyproject.toml  requirements.txt  setup.cfg  web.env  worker.env
app/: __init__.py  daos.py  db.py  errors.py  helpers.py
app/daos/: __init__.py
app/models/: __init__.py
app/routes/: __init__.py  protein.py
app/services/: SearchService.py  __init__.py
app/tasks/: __init__.py
backend/: alembic.ini  pyproject.toml  requirements.txt  setup.cfg  worker_start.sh
backend/alembic/: env.py
backend/app/: __init__.py  config.py  helpers.py  main.py  schemas.py  worker.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  root.py  tasks.py
backend/app/core/: celery_app.py  config.py  sentry.py
backend/app/core/configs/: config.py  web_config.py  worker_config.py
backend/app/helpers/: __init__.py
backend/app/models/: __init__.py  resources.py
backend/app/services/: SeqInfoService.py  TaskService.py  __init__.py
backend/tests/: __init__.py
configs/redis/: redis.conf
examples/: requirements.txt
examples/protein_sequence_identification/: example.ipynb  sample.fasta
prototype/: pyproject.toml
prototype/protein_sequence_identification/: blast-uniprot-sample.json  blast-uniprot-test.json.json  example.ipynb  ncbiblast.py  sample.fasta  sample_only_seq.fasta
prototype/taxonomy_system/: MainSearch.py  SearchAccession.py  SearchCommonName.py  SearchPubMed.py  SearchTaxonomy.py  Test.py  main.py
routes/: __init__.py  task.py
scripts/example/: example.ipynb
taxonomySystem/: MainSearch.py  SearchAccession.py  SearchCommonName.py  SearchPubMed.py  SearchTaxonomy.py  Test.py  main.py
