[tool.poetry]
name = "bioproject_backend"
version = "0.1.0"
description = "A protein analysis platform"
authors = ["guyleaf <ychhua1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
python-dotenv = "^0.19.0"
biopython = "^1.79"
alembic = "^1.6.5"
celery = {extras = ["redis"], version = "^5.1.2"}
sentry-sdk = "^1.3.1"
pydantic = {extras = ["email"], version = "^1.8.2"}
pyrabbit = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
autoflake = "^1.4"
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.9.3"
pre-commit = "^2.13.0"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
